# PyRaysum

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  api.html  genindex.html  index.html  init.html  links.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/: test_conda_env.yml
.github/workflows/: deploy-meson.yml  deploy.yml
_modules/: index.html
_modules/pyraysum/: frs.html  plot.html  prs.html
_sources/: api.rst.txt  index.rst.txt  init.rst.txt
_sources/tutorials/1/: 1_make_seismograms.rst.txt
_sources/tutorials/2/: 2_reproduce_Porter-2011.rst.txt
_sources/tutorials/3/: 3_invert_rf.rst.txt
docs/: .buildinfo  api.rst  conf.py  index.rst  init.rst  links.rst  prs.rst
docs/turtorials/1/: 1_make_seismograms.rst
docs/turtorials/2/: 2_reproduce_Porter-2011.rst
docs/turtorials/3/: 3_invert_rf.rst
docs/tutorials/1/: 1_make_seismograms.rst
docs/tutorials/2/: 2_reproduce_Porter-2011.rst
docs/tutorials/3/: 3_invert_rf.rst
pyraysum/: __init__.py  coverage.xml  doc.py  elast.py  frs.py  plot.py  prs.py  tensor.py  utils.py  wiggle.py
pyraysum/examples/models/: model_Porter2011_aniso.txt  model_Porter2011_dip.txt  model_test.txt
pyraysum/examples/notebooks/: 1_make_seismograms.ipynb  2_reproduce_Porter-2011.ipynb  3_invert_rf.ipynb  Untitled.ipynb  raysum-params  sample.arr  sample.geom  sample.mod  sample.ph  sim_Porter2011.ipynb  test_subprocess.ipynb
pyraysum/scripts/: install_raysum.py
pyraysum/src/: Makefile  bin  buildmodel.f  call-seis-spread.f  eispack-cg.f  matrixops.f  params.h  phaselist.f  raysum.f  readwrite.f  readwritemem.f  seis-misfit  seis-misfit.f  seis-spread.f  test.f  trace.f
pyraysum/tests/: evec_warn_model.txt  test_0_imports.py  test_1_model.py  test_2_run_prs.py  test_4_geometry.py  test_5_control.py  test_import.py  test_model.py  test_prs.py
src/: Makefile  matrixops.f  misfit.f  params.h  pyraysum-f2pywrappers2.f90  pyraysummodule.c  raysum.f90  raysum_flow.txt  raysum_main.f90  raysum_sub.f90  readwrite.f
src/pyraysum/: __init__.py  doc.py  eigenvec.f  params.h  prs.py  readwrite.f  seis-spread.f  trace.f
src/pyraysum/examples/data/: model_Porter2011_dip.txt
src/pyraysum/examples/notebooks/: 1_make_seismograms.ipynb
src/pyraysum/tests/: test_1_model.py  test_2_run_prs.py  test_5_control.py
tutorials/1/: 1_make_seismograms.html
tutorials/2/: 2_reproduce_Porter-2011.html
tutorials/3/: 3_invert_rf.html
